# company_manager

./: Cargo.toml  README.md
release/: company-manager_1.0.0_amd64.deb
src/: main.rs
